// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div>
  <FadeIn
    key="0"
  >
    <Section
      hasPadding={false}
    >
      <div
        className="card"
      >
        <div
          className="card-content"
        >
          <div
            className="media"
          >
            <div
              className="media-content"
            >
              <H5>
                Personal Details
              </H5>
            </div>
            <div
              className="media-right"
            >
               
              <div>
                <div
                  className="undefined undefined"
                >
                  <FaCheck />
                  <span>
                    Completed
                  </span>
                </div>
                <Button
                  onClick={[MockFunction]}
                  type="button"
                  variant="primary"
                >
                  Edit
                </Button>
              </div>
            </div>
          </div>
          <div
            className="undefined undefined"
          >
            <FaCheck />
            <span>
              Completed
            </span>
          </div>
        </div>
      </div>
    </Section>
  </FadeIn>
  <FadeIn
    key="1"
  >
    <Section
      hasPadding={false}
    >
      <div
        className="card"
      >
        <div
          className="card-content"
        >
          <div
            className="media"
          >
            <div
              className="media-content"
            >
              <H5>
                Primary ID
              </H5>
            </div>
            <div
              className="media-right"
            >
               
              <div>
                <div
                  className="undefined undefined"
                >
                  <FaTimes />
                  <span>
                    Incomplete
                  </span>
                </div>
                <Button
                  onClick={[MockFunction]}
                  type="button"
                  variant="primary"
                >
                  Edit
                </Button>
              </div>
            </div>
          </div>
          <div
            className="undefined undefined"
          >
            <FaTimes />
            <span>
              Incomplete
            </span>
          </div>
        </div>
      </div>
    </Section>
  </FadeIn>
  <FadeIn
    key="2"
  >
    <Section
      hasPadding={false}
    >
      <div
        className="card"
      >
        <div
          className="card-content"
        >
          <div
            className="media"
          >
            <div
              className="media-content"
            >
              <H5>
                Secondary ID
              </H5>
            </div>
            <div
              className="media-right"
            >
               
              <div>
                <div
                  className="undefined undefined"
                >
                  <FaCheck />
                  <span>
                    Completed
                  </span>
                </div>
                <Button
                  onClick={[MockFunction]}
                  type="button"
                  variant="primary"
                >
                  Edit
                </Button>
              </div>
            </div>
          </div>
          <div
            className="undefined undefined"
          >
            <FaCheck />
            <span>
              Completed
            </span>
          </div>
        </div>
      </div>
    </Section>
  </FadeIn>
  <FadeIn
    key="3"
  >
    <Section
      hasPadding={false}
    >
      <div
        className="card"
      >
        <div
          className="card-content"
        >
          <div
            className="media"
          >
            <div
              className="media-content"
            >
              <H5>
                Address Information
              </H5>
            </div>
            <div
              className="media-right"
            >
               
              <div>
                <div
                  className="undefined undefined"
                >
                  <FaTimes />
                  <span>
                    Incomplete
                  </span>
                </div>
                <Button
                  onClick={[MockFunction]}
                  type="button"
                  variant="primary"
                >
                  Edit
                </Button>
              </div>
            </div>
          </div>
          <div
            className="undefined undefined"
          >
            <FaTimes />
            <span>
              Incomplete
            </span>
          </div>
        </div>
      </div>
    </Section>
  </FadeIn>
  <FadeIn
    key="4"
  >
    <Section
      hasPadding={false}
    >
      <div
        className="card"
      >
        <div
          className="card-content"
        >
          <div
            className="media"
          >
            <div
              className="media-content"
            >
              <H5>
                Declaration Risk Management
              </H5>
            </div>
            <div
              className="media-right"
            >
               
              <div>
                <div
                  className="undefined undefined"
                >
                  <FaTimes />
                  <span>
                    Incomplete
                  </span>
                </div>
                <Button
                  onClick={[MockFunction]}
                  type="button"
                  variant="primary"
                >
                  Edit
                </Button>
              </div>
            </div>
          </div>
          <div
            className="undefined undefined"
          >
            <FaTimes />
            <span>
              Incomplete
            </span>
          </div>
        </div>
      </div>
    </Section>
  </FadeIn>
  <FadeIn
    key="5"
  >
    <Section
      hasPadding={false}
    >
      <div
        className="card"
      >
        <div
          className="card-content"
        >
          <div
            className="media"
          >
            <div
              className="media-content"
            >
              <H5>
                Report
              </H5>
            </div>
            <div
              className="media-right"
            >
               
              <div>
                <Button
                  onClick={[MockFunction]}
                  type="button"
                  variant="primary"
                >
                  View
                </Button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </Section>
  </FadeIn>
</div>
`;

exports[`checklist-detail ChecklistDetail should match snapshot when loading 1`] = `
<Loader
  fullPage={true}
  label="Loading"
/>
`;

exports[`checklist-detail ChecklistDetail should match snapshot when not loading 1`] = `
<Section
  hasMargin={false}
  hasPadding={false}
>
  <ErrorBoundary>
    <Connect(AMLProgressBar) />
    <Section>
      <FadeIn
        key="0"
      >
        <Section
          hasPadding={false}
        >
          <div
            className="card"
          >
            <div
              className="card-content"
            >
              <div
                className="media"
              >
                <div
                  className="media-content"
                >
                  <H5>
                    Personal Details
                  </H5>
                </div>
                <div
                  className="media-right"
                >
                   
                  <div>
                    <div
                      className="undefined undefined"
                    >
                      <FaCheck />
                      <span>
                        Completed
                      </span>
                    </div>
                    <Button
                      type="button"
                      variant="primary"
                    >
                      Edit
                    </Button>
                  </div>
                </div>
              </div>
              <div
                className="undefined undefined"
              >
                <FaCheck />
                <span>
                  Completed
                </span>
              </div>
            </div>
          </div>
        </Section>
      </FadeIn>
      <FadeIn
        key="1"
      >
        <Section
          hasPadding={false}
        >
          <div
            className="card"
          >
            <div
              className="card-content"
            >
              <div
                className="media"
              >
                <div
                  className="media-content"
                >
                  <H5>
                    Primary ID
                  </H5>
                </div>
                <div
                  className="media-right"
                >
                   
                  <div>
                    <div
                      className="undefined undefined"
                    >
                      <FaTimes />
                      <span>
                        Incomplete
                      </span>
                    </div>
                    <Button
                      type="button"
                      variant="primary"
                    >
                      Edit
                    </Button>
                  </div>
                </div>
              </div>
              <div
                className="undefined undefined"
              >
                <FaTimes />
                <span>
                  Incomplete
                </span>
              </div>
            </div>
          </div>
        </Section>
      </FadeIn>
      <FadeIn
        key="2"
      >
        <Section
          hasPadding={false}
        >
          <div
            className="card"
          >
            <div
              className="card-content"
            >
              <div
                className="media"
              >
                <div
                  className="media-content"
                >
                  <H5>
                    Secondary ID
                  </H5>
                </div>
                <div
                  className="media-right"
                >
                   
                  <div>
                    <div
                      className="undefined undefined"
                    >
                      <FaCheck />
                      <span>
                        Completed
                      </span>
                    </div>
                    <Button
                      type="button"
                      variant="primary"
                    >
                      Edit
                    </Button>
                  </div>
                </div>
              </div>
              <div
                className="undefined undefined"
              >
                <FaCheck />
                <span>
                  Completed
                </span>
              </div>
            </div>
          </div>
        </Section>
      </FadeIn>
      <FadeIn
        key="3"
      >
        <Section
          hasPadding={false}
        >
          <div
            className="card"
          >
            <div
              className="card-content"
            >
              <div
                className="media"
              >
                <div
                  className="media-content"
                >
                  <H5>
                    Address Information
                  </H5>
                </div>
                <div
                  className="media-right"
                >
                   
                  <div>
                    <div
                      className="undefined undefined"
                    >
                      <FaTimes />
                      <span>
                        Incomplete
                      </span>
                    </div>
                    <Button
                      type="button"
                      variant="primary"
                    >
                      Edit
                    </Button>
                  </div>
                </div>
              </div>
              <div
                className="undefined undefined"
              >
                <FaTimes />
                <span>
                  Incomplete
                </span>
              </div>
            </div>
          </div>
        </Section>
      </FadeIn>
      <FadeIn
        key="4"
      >
        <Section
          hasPadding={false}
        >
          <div
            className="card"
          >
            <div
              className="card-content"
            >
              <div
                className="media"
              >
                <div
                  className="media-content"
                >
                  <H5>
                    Declaration Risk Management
                  </H5>
                </div>
                <div
                  className="media-right"
                >
                   
                  <div>
                    <div
                      className="undefined undefined"
                    >
                      <FaTimes />
                      <span>
                        Incomplete
                      </span>
                    </div>
                    <Button
                      type="button"
                      variant="primary"
                    >
                      Edit
                    </Button>
                  </div>
                </div>
              </div>
              <div
                className="undefined undefined"
              >
                <FaTimes />
                <span>
                  Incomplete
                </span>
              </div>
            </div>
          </div>
        </Section>
      </FadeIn>
      <FadeIn
        key="5"
      >
        <Section
          hasPadding={false}
        >
          <div
            className="card"
          >
            <div
              className="card-content"
            >
              <div
                className="media"
              >
                <div
                  className="media-content"
                >
                  <H5>
                    Report
                  </H5>
                </div>
                <div
                  className="media-right"
                >
                   
                  <div>
                    <Button
                      type="button"
                      variant="primary"
                    >
                      View
                    </Button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </Section>
      </FadeIn>
    </Section>
    <withRouter(ProfileModal)
      afterClose={[MockFunction]}
      id="123"
      modalContentType="PROFILE"
      visible={true}
    />
  </ErrorBoundary>
</Section>
`;
